# AI-Data-Analyst-Assistant-CrewAI-Streamlit-Hugging-Face-Spaces

./: README.md  pyproject.toml  requirements.txt
src/crewaisdad/: Analysis.md  Business.md  Visual.md  app.py  crew.py  main.py
src/crewaisdad/config/: agents.yaml  tasks.yaml
