[project]
name = "crewaisdad"
version = "0.1.0"
description = "CrewAI+SDAD using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
crewaisdad = "crewaisdad.main:run"
run_crew = "crewaisdad.main:run"
train = "crewaisdad.main:train"
replay = "crewaisdad.main:replay"
test = "crewaisdad.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
